Fixed spacing issues in header regarding user profile button and added it to all pages

--- a/www/assets/css/main.css
+++ b/www/assets/css/main.css
@@ -2073,14 +2073,14 @@
 		text-align: center;
 		position: absolute;
 		top: 0;
-		left: 0;
-		width: 100%;
+		left: 9%;
+		width: 90%;
 		height: 4em;
 		line-height: 4em;
 	}
 
 		#nav > ul {
-			margin: 0;
+			margin-left: 0;
 		}
 
 			#nav > ul > li {
